added styles, finished navbar

--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <title>DevCamp React Starter</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');
+  </style>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Dancing+Script:wght@700&display=swap');
+  </style>
 </head>
 
 <body>
